--- a/assets/css/jm-main.css
+++ b/assets/css/jm-main.css
@@ -59,10 +59,11 @@
     }
     #jmli-shortcode .jmli-post-card-header .company .companyName{
         font-weight:bold;
+        line-height: 1.25;
     }
     #jmli-shortcode .jmli-post-card-header .company .companyFollowers{
-        /* font-weight:bold; */
         color:rgb(0 0 0 / 60%);
+        line-height: 1.25;
     }
     #jmli-shortcode .jmli-post-card-header .company .postDate{
         color: rgb(0 0 0 / 60%);
@@ -74,9 +75,12 @@
     #jmli-shortcode .jmli-post-card-body {
         padding: 0.5rem 1rem;
         display: block;
-        max-height: 3rem;
+        max-height: 4rem;
         overflow: hidden;
         position: relative;
+    }
+    #jmli-shortcode .jmli-post-card-body-text{
+        line-height: 1.25;
     }
 
     #jmli-shortcode .jmli-post-card-footer {
@@ -108,4 +112,36 @@
         box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.04);
         color: rgba(44, 51, 56, 0.5);
     }
+
+    #jmli-shortcode .jmli-see-all-posts{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        margin-top: 25px;
+    }
+    
+    #jmli-shortcode .jmli-see-all-posts-button{
+        background: #ed3237;
+        text-align: left;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0 30px;
+        display: inline-block;
+        cursor: pointer;
+        font-family: "Patua One";
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 400;
+        text-transform: uppercase;
+        text-decoration: none;
+        line-height: 35px;
+        letter-spacing: .8px;
+        color: #ffffff;
+        border-radius: 1px;
+        box-shadow: 0px 15px 50px 0px rgba(0,0,0,0.18);
+    }
+    #jmli-shortcode .jmli-see-all-posts-button:hover{
+        background-color: #ce1217;
+    }
+
 </style>
